[gd_scene load_steps=2 format=3 uid="uid://v6hlaoteehbu"]

[ext_resource type="Script" uid="uid://b8srajtno74md" path="res://properties/sector_components/stoudson_bomb_key_sector/bomb_key_sector_v_box.gd" id="1_4nfjw"]

[node name="BombKeySectorVBox" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("1_4nfjw")

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="KeySectorInfoLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Bomb key sector N"
horizontal_alignment = 1

[node name="BombInfoLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "This bomb key sector belongs to Stoudson Bomb M"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Key sector building:"

[node name="NormalKeySectorOptionButton" type="OptionButton" parent="HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 12
selected = 0
item_count = 3
popup/item_0/text = "Variant 1"
popup/item_0/id = 243
popup/item_1/text = "Variant 2"
popup/item_1/id = 244
popup/item_2/text = "Other"
popup/item_2/id = 300

[node name="ParasiteKeySectorOptionButton" type="OptionButton" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
selected = 0
item_count = 7
popup/item_0/text = "Top-left corner"
popup/item_0/id = 233
popup/item_1/text = "Top-right corner"
popup/item_1/id = 234
popup/item_2/text = "Bottom-left corner"
popup/item_2/id = 232
popup/item_3/text = "Bottom-right corner"
popup/item_3/id = 231
popup/item_4/text = "Variant 1"
popup/item_4/id = 243
popup/item_5/text = "Variant 2"
popup/item_5/id = 244
popup/item_6/text = "Other"
popup/item_6/id = 300
